# Armatik_Learning_Cplusplus

./: CMakeLists.txt  README.md  main.cpp
ClassWork/: Day14.cpp  Day14_2.cpp  Day21_1.cpp  Day3.cpp  Day4.cpp  Day5.cpp  Day6.cpp  Day7.cpp  Exm1.cpp
Day10/: Kniga_Day_10_1.cpp  Kniga_Day_10_10.cpp  Kniga_Day_10_2.cpp  Kniga_Day_10_3.cpp  Kniga_Day_10_4.cpp  Kniga_Day_10_5.cpp  Kniga_Day_10_6.cpp  Kniga_Day_10_7.cpp  Kniga_Day_10_8.cpp  Kniga_Day_10_9.cpp
Day11/: Kniga_Day_11_1.cpp  Kniga_Day_11_2.cpp  Kniga_Day_11_3.cpp  Kniga_Day_11_4.cpp  Kniga_Day_11_5.cpp  Kniga_Day_11_6.cpp
Day12/: Kniga_Day_12_1.cpp  Kniga_Day_12_3.cpp  Kniga_Day_12_5.cpp
Kniga_kak_stat_program/: 4.1.cpp  4.2.cpp  4_1Danya.cpp  4_2Danya.cpp  4_3.cpp  4_4.cpp  5_1.cpp  5_8.cpp
Lab 12/: Lab12_1.cpp  Lab12_2.cpp  Lab12_3.cpp  Lab_12_4.cpp  Lab_12_5.cpp  Lab_12_6.cpp  lab12_6.cpp
Lab 13/: Lab13_1.cpp  Lab13_2.cpp  Lab13_3.cpp  Lab13_4.cpp  Lab13_5.cpp  Lab13_6.cpp
Lab 15/: Lab15_1.cpp
Lab10/: Dz1.cpp  Dz2.cpp  Dz3.cpp  Ex1.cpp  Ex2.cpp  Ex3.cpp  Ex4.cpp  Ex5.cpp
Lab11/: Lab11_2.cpp  Lab11_4.cpp  Lab11_5.cpp  Lab11_6.cpp
Lab2/: 1.cpp  11.cpp  13.cpp  15.cpp  16.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp
Lab3/: 2.cpp  dz3.cpp
Lab4/: 1.cpp  3.cpp  5.cpp
Lab5/: 2.cpp  4.cpp  6.cpp  7.cpp  9.cpp
Lab6/: 2.cpp  3.cpp  4.cpp
Lab7/: 1.cpp  2.cpp  3.cpp  Kniga_Day_5_1.cpp  Kniga_Day_5_3.cpp  Kniga_Day_5_4.cpp  Kniga_Day_5_5.cpp  Kniga_Day_5_7.cpp
Lab8/: Kniga_Day_9_1.cpp  Kniga_Day_9_2.cpp  Kniga_Day_9_4.cpp  Kniga_Day_9_5.cpp  Kniga_Day_9_6.cpp  Kniga_Day_9_8.cpp
(+94 files in other folders)
