cmake_minimum_required(VERSION 3.23)
project(Armatik_Learning_C__)

set(CMAKE_CXX_STANDARD 14)

add_executable(Armatik_Learning_C__ main.cpp Lab2/10.cpp Lab2/11.cpp Lab2/12.cpp Lab2/13.cpp Lab2/14.cpp Lab2/15.cpp Lab2/16.cpp ClassWork/Day3.cpp Lab3/2.cpp Lab3/1.cpp Lab3/3.cpp ClassWork/Day4.cpp Lab3/dz3.cpp Lab4/1.cpp)
