cmake_minimum_required(VERSION 3.23)
project(Armatik_Learning_C__)

set(CMAKE_CXX_STANDARD 17)

add_executable(Armatik_Learning_C__ main.cpp Lab2/10.cpp Lab2/11.cpp Lab2/12.cpp Lab2/13.cpp Lab2/14.cpp Lab2/15.cpp Lab2/16.cpp ClassWork/Day3.cpp Lab3/2.cpp Lab3/1.cpp Lab3/3.cpp ClassWork/Day4.cpp Lab3/dz3.cpp Lab4/1.cpp Lab4/2.cpp Lab4/3.cpp Lab4/4.cpp Lab4/5.cpp ClassWork/Day5.cpp Lab5/1.cpp Lab5/2.cpp Lab5/3.cpp Lab5/4.cpp Lab5/5.cpp Lab5/6.cpp Lab5/7.cpp Lab5/8.cpp Lab5/9.cpp Lab5/10.cpp Lab5/11.cpp Lab5/12.cpp Lab5/13.cpp ClassWork/Day6.cpp Lab6/1.cpp Lab6/2.cpp Lab6/3.cpp Lab6/4.cpp ClassWork/Day7.cpp Lab7/1.cpp Lab7/2.cpp Lab7/3.cpp)
